# OpenGL-Testbed

./: .gitignore  CMakeLists.txt  MakeFile  README.md
src/: main.cpp  test.txt  triangle.cpp  window.cpp
